refactor(module): improve info display

--- a/completions/psc/language/zh-CN.json
+++ b/completions/psc/language/zh-CN.json
@@ -2298,46 +2298,52 @@
     },
     "confirm_cancel": "<@Green>操作取消!",
     "current_value": "当前值",
-    "desc": [
-      "<@Cyan>当前模块版本: <@Magenta>{{ $PSCompletions.version }}<@Cyan>\n",
+    "description": [
+      "<@Cyan>[模块描述]\n",
+      "<@Blue>PSCompletions(<@Magenta>psc<@Cyan>) --- 一个补全管理器，为 PowerShell 带来更出色、更简便的 Tab 补全体验\n",
       "\n",
-      "模块版本日志:\n",
-      "  Github: <@Blue>https://github.com/abgox/PSCompletions/blob/main/module/CHANGELOG.zh-CN.md<@Cyan>\n",
-      "  Gitee : <@Blue>https://gitee.com/abgox/PSCompletions/blob/main/module/CHANGELOG.zh-CN.md<@Cyan>\n",
+      "<@Cyan>[模块版本]\n",
+      "<@Magenta>{{ $PSCompletions.version }}<@Cyan>\n",
       "\n",
-      "输入 <@Magenta>psc<@Cyan> 并按下 <@Magenta>空格<@Cyan> 和 <@Magenta>Tab<@Cyan> 键, 通过补全提示信息，你会快速了解所有命令用法。\n",
+      "<@Cyan>[版本日志]\n",
+      "Github: <@Blue>https://github.com/abgox/PSCompletions/blob/main/module/CHANGELOG.zh-CN.md<@Cyan>\n",
+      "Gitee : <@Blue>https://gitee.com/abgox/PSCompletions/blob/main/module/CHANGELOG.zh-CN.md<@Cyan>\n",
       "\n",
-      "<@Blue>PSCompletions<@Cyan> 提供了一个强大的模块补全菜单 <@Yellow>(目前仅 Windows 可用)<@Cyan>\n",
-      "  - 在模块补全菜单中，你可以输入字符进行过滤，支持三个匹配符:\n",
-      "    - <@Magenta>^<@Cyan>: 匹配开头\n",
-      "    - <@Magenta>?<@Cyan>: 匹配一个任意字符\n",
-      "    - <@Magenta>*<@Cyan>: 匹配一个或多个任意字符\n",
-      "  - 以下是模块补全菜单的按键绑定:\n",
-      "    - 选用当前选中的补全项: <@Magenta>Enter<@Cyan> (回车) | <@Magenta>Space<@Cyan> (空格)\n",
-      "        - 当只有一个补全项时，也可以使用 <@Magenta>Tab<@Cyan>\n",
-      "    - 删除过滤字符: <@Magenta>Backspace<@Cyan> (退格)\n",
-      "    - 退出模块补全菜单: <@Magenta>Esc<@Cyan> | <@Magenta>Ctrl + c<@Cyan>\n",
-      "        - 当过滤区域没有字符时，也可以使用 <@Magenta>Backspace<@Cyan> (退格)\n",
-      "    - 选择上一个补全项:  <@Magenta>Up<@Cyan>  | <@Magenta>Left<@Cyan>  | <@Magenta>Shift + Tab<@Cyan> | <@Magenta>Ctrl + u<@Cyan> | <@Magenta>Ctrl + p<@Cyan> | <@Magenta>Ctrl + k<@Cyan>\n",
-      "    - 选择下一个补全项: <@Magenta>Down<@Cyan> | <@Magenta>Right<@Cyan> |     <@Magenta>Tab<@Cyan>     | <@Magenta>Ctrl + d<@Cyan> | <@Magenta>Ctrl + n<@Cyan> | <@Magenta>Ctrl + j<@Cyan>\n",
+      "<@Cyan>[模块用法]\n",
+      "输入 <@Magenta>psc<@Cyan> 并按下 <@Magenta>Space<@Cyan> (空格) 和 <@Magenta>Tab<@Cyan> 键, 通过补全提示信息，你会快速了解所有命令用法\n",
+      "运行 <@Magenta>psc<@Cyan> 会再次显示此页内容，并重载模块的数据和按键绑定\n",
       "\n",
+      "<@Cyan>[模块补全菜单]\n",
+      "<@Blue>PSCompletions<@Cyan> 提供了一个更强大的模块补全菜单 <@Yellow>(目前仅 Windows 可用)<@Cyan>\n",
+      "\n",
+      "可以输入字符进行过滤，支持三个匹配符:\n",
+      "  - <@Magenta>^<@Cyan>: 匹配开头\n",
+      "  - <@Magenta>?<@Cyan>: 匹配一个任意字符\n",
+      "  - <@Magenta>*<@Cyan>: 匹配一个或多个任意字符\n",
+      "\n",
+      "按键绑定:\n",
+      "  - 选用当前选中的补全项: <@Magenta>Space<@Cyan> (空格) | <@Magenta>Enter<@Cyan> (回车)\n",
+      "      - 当只有一个补全项时，也可以使用 <@Magenta>Tab<@Cyan>\n",
+      "  - 删除过滤字符: <@Magenta>Backspace<@Cyan> (退格)\n",
+      "  - 退出模块补全菜单: <@Magenta>Esc<@Cyan> | <@Magenta>Ctrl + c<@Cyan>\n",
+      "      - 当过滤区域没有字符时，也可以使用 <@Magenta>Backspace<@Cyan> (退格)\n",
+      "  - 选择上一个补全项:  <@Magenta>Up<@Cyan>  | <@Magenta>Shift + Tab<@Cyan> | <@Magenta>Ctrl + u<@Cyan> | <@Magenta>Ctrl + p<@Cyan> | <@Magenta>Ctrl + k<@Cyan>\n",
+      "  - 选择下一个补全项: <@Magenta>Down<@Cyan> |     <@Magenta>Tab<@Cyan>     | <@Magenta>Ctrl + d<@Cyan> | <@Magenta>Ctrl + n<@Cyan> | <@Magenta>Ctrl + j<@Cyan>\n",
+      "\n",
+      "<@Cyan>[全局命名]\n",
       "<@Blue>PSCompletions<@Cyan> 模块只会占用两个全局命名，<@Yellow>它们应该是只读的，不应该修改或覆盖它们<@Cyan>\n",
-      "  <@Magenta>PSCompletions<@Cyan>: 函数名, 模块导出的核心函数，<@Magenta>psc<@Cyan> 是它的别名\n",
+      "  <@Magenta>PSCompletions<@Cyan>: 函数名, 模块导出的核心函数，<@Magenta>psc<@Cyan> 是它的默认别名\n",
       " <@Magenta>$PSCompletions<@Cyan>: 变量名, 存储模块的相关数据\n",
       "\n",
-      "更多相关信息, 请访问:\n",
-      "  Website : <@Blue>https://pscompletions.abgox.com<@Cyan>\n",
-      "  Github  : <@Blue>https://github.com/abgox/PSCompletions<@Cyan>\n",
-      "  Gitee   : <@Blue>https://gitee.com/abgox/PSCompletions<@Cyan>\n",
+      "<@Cyan>[其他内容]\n",
+      "Website : <@Blue>https://pscompletions.abgox.com<@Cyan>\n",
+      "FAQ     : <@Blue>https://pscompletions.abgox.com/faq<@Cyan>\n",
+      "Github  : <@Blue>https://github.com/abgox/PSCompletions<@Cyan>\n",
+      "Gitee   : <@Blue>https://gitee.com/abgox/PSCompletions<@Cyan>\n",
       "\n",
       "如果有使用问题, 请提交 issue: https://github.com/abgox/PSCompletions/issues\n",
       "\n",
       "如果 <@Blue>PSCompletions<@Cyan> 对你有所帮助, 请给这个项目一个 <@Yellow>Star<@Cyan>"
-    ],
-    "description": [
-      "<@Blue>PSCompletions(<@Magenta>psc<@Cyan>) --- PowerShell 补全管理器\n",
-      "\n",
-      "{{ $PSCompletions.info.desc }}"
     ],
     "err": {
       "deny_change_menu_line_style": [
@@ -2348,14 +2354,6 @@
         "<@Red>它包含了通配符"
       ]
     },
-    "init_info": [
-      "\n",
-      "✨✨✨ <@Blue>PSCompletions(<@Magenta>psc<@Cyan>) --- 初始化成功 ✨✨✨\n",
-      "<@Yellow>以下内容仅首次初始化显示, 你可以通过运行 <@Magenta>psc<@Yellow> 来查看它们\n",
-      "\n",
-      "{{ $PSCompletions.info.description }}",
-      "\n"
-    ],
     "list": {
       "added": "已添加",
       "example": [
@@ -2375,8 +2373,8 @@
       },
       "config": {
         "err": {
-          "filter_symbol": "<@Red>必须包含至少两个字符",
           "completion_suffix": "<@Red>只能是一个或多个空格",
+          "filter_symbol": "<@Red>必须包含至少两个字符",
           "trigger_key": "<@Magenta>{{ $arg[3] }}<@Red> 不是一个可用的按键映射，修改失败",
           "v_1_or_0": "<@Red>应该是数字 <@Magenta>1<@Red> 或 <@Magenta>0<@Red>, 表示启用或禁用",
           "v_ge": "<@Red>应该是一个大于等于 <@Magenta>{{ $min }}<@Red> 的整数数字",
@@ -2445,7 +2443,7 @@
         "<@Cyan>[模块更新]\n",
         "<@Blue>PSCompletions: <@Magenta>{{ $PSCompletions.version }} <@Cyan>=> <@Magenta>{{ $PSCompletions.config.enable_module_update }}\n",
         "\n",
-        "<@Cyan>[版本日志]\n",
+        "<@Cyan>[模块日志]\n",
         "Github: <@Blue>https://github.com/abgox/PSCompletions/blob/main/module/CHANGELOG.zh-CN.md<@Cyan>\n",
         "Gitee : <@Blue>https://gitee.com/abgox/PSCompletions/blob/main/module/CHANGELOG.zh-CN.md<@Cyan>\n",
         "\n",
