--- a/completions/psc/language/en-US.json
+++ b/completions/psc/language/en-US.json
@@ -2302,46 +2302,52 @@
     },
     "confirm_cancel": "<@Green>The operation has been canceled.",
     "current_value": "Current Value",
-    "desc": [
-      "<@Cyan>Current module version: <@Magenta>{{ $PSCompletions.version }}<@Cyan>\n",
+    "description": [
+      "<@Cyan>[Module Description]\n",
+      "<@Blue>PSCompletions(<@Magenta>psc<@Cyan>) --- A completion manager for a better and simpler tab-completion experience in PowerShell\n",
       "\n",
-      "Module version changelog:\n",
+      "<@Cyan>[Module Version]\n",
+      "<@Magenta>{{ $PSCompletions.version }}<@Cyan>\n",
+      "\n",
+      "<@Cyan>[Module Changelog]\n",
       "  Github: <@Blue>https://github.com/abgox/PSCompletions/blob/main/module/CHANGELOG.md<@Cyan>\n",
       "  Gitee : <@Blue>https://gitee.com/abgox/PSCompletions/blob/main/module/CHANGELOG.md<@Cyan>\n",
       "\n",
+      "<@Cyan>[Module Usage]\n",
       "Enter <@Magenta>psc<@Cyan>, press <@Magenta>Space<@Cyan> and <@Magenta>Tab<@Cyan> key, you will quickly learn all usages by reading the completion tip.\n",
+      "Run <@Magenta>psc<@Cyan> will display this page content again and reload the module's data and key bindings.\n",
       "\n",
-      "<@Blue>PSCompletions<@Cyan> provides a powerful module completion menu. <@Yellow>(Currently only available on Windows)<@Cyan>\n",
-      "  - You can enter characters to filter, and three matching symbols are supported:\n",
-      "    - <@Magenta>^<@Cyan>: Match the beginning.\n",
-      "    - <@Magenta>?<@Cyan>: Match any single character.\n",
-      "    - <@Magenta>*<@Cyan>: Match one or more any characters.\n",
-      "  - Here are some key bindings:\n",
-      "    - Apply the selected completion item: <@Magenta>Enter<@Cyan> | <@Magenta>Space<@Cyan>\n",
-      "        - You can also use <@Magenta>Tab<@Cyan> when there's only one completion.\n",
-      "    - Delete filter characters: <@Magenta>Backspace<@Cyan>\n",
-      "    - Exit the module completion menu: <@Magenta>Esc<@Cyan> | <@Magenta>Ctrl + c<@Cyan>\n",
-      "        - You can also use <@Magenta>Backspace<@Cyan> when there're no characters in the filter area.\n",
-      "    - Select previous completion item:  <@Magenta>Up<@Cyan>  | <@Magenta>Left<@Cyan>  | <@Magenta>Shift + Tab<@Cyan> | <@Magenta>Ctrl + u<@Cyan> | <@Magenta>Ctrl + p<@Cyan> | <@Magenta>Ctrl + k<@Cyan>\n",
-      "    - Select   next   completion item: <@Magenta>Down<@Cyan> | <@Magenta>Right<@Cyan> |     <@Magenta>Tab<@Cyan>     | <@Magenta>Ctrl + d<@Cyan> | <@Magenta>Ctrl + n<@Cyan> | <@Magenta>Ctrl + j<@Cyan>\n",
+      "<@Cyan>[Module Completion Menu]\n",
+      "<@Blue>PSCompletions<@Cyan> provides a more powerful module completion menu. <@Yellow>(Currently only available on Windows)<@Cyan>\n",
       "\n",
+      "You can enter characters to filter, and three matching symbols are supported:\n",
+      "  - <@Magenta>^<@Cyan>: Match the beginning.\n",
+      "  - <@Magenta>?<@Cyan>: Match any single character.\n",
+      "  - <@Magenta>*<@Cyan>: Match one or more any characters.\n",
+      "\n",
+      "Here are some key bindings:\n",
+      "  - Apply the selected completion item: <@Magenta>Space<@Cyan> | <@Magenta>Enter<@Cyan>\n",
+      "      - You can also use <@Magenta>Tab<@Cyan> when there's only one completion.\n",
+      "  - Delete filter characters: <@Magenta>Backspace<@Cyan>\n",
+      "  - Exit the module completion menu: <@Magenta>Esc<@Cyan> | <@Magenta>Ctrl + c<@Cyan>\n",
+      "      - You can also use <@Magenta>Backspace<@Cyan> when there're no characters in the filter area.\n",
+      "  - Select previous completion item:  <@Magenta>Up<@Cyan>  | <@Magenta>Shift + Tab<@Cyan> | <@Magenta>Ctrl + u<@Cyan> | <@Magenta>Ctrl + p<@Cyan> | <@Magenta>Ctrl + k<@Cyan>\n",
+      "  - Select   next   completion item: <@Magenta>Down<@Cyan> |     <@Magenta>Tab<@Cyan>     | <@Magenta>Ctrl + d<@Cyan> | <@Magenta>Ctrl + n<@Cyan> | <@Magenta>Ctrl + j<@Cyan>\n",
+      "\n",
+      "<@Cyan>[Global Name]\n",
       "<@Blue>PSCompletions<@Cyan> will take up two global names. <@Yellow>They should be read-only, and you should not modify or override them.<@Cyan>\n",
-      "  <@Magenta>PSCompletions<@Cyan>: A function name. The core function of the module export. <@Magenta>psc<@Cyan> is its alias.\n",
+      "  <@Magenta>PSCompletions<@Cyan>: A function name. The core function of the module export. <@Magenta>psc<@Cyan> is its default alias.\n",
       " <@Magenta>$PSCompletions<@Cyan>: A variable name. Save all data related to the module.\n",
       "\n",
-      "For more information, please visit the project:\n",
-      "  Website : <@Blue>https://pscompletions.abgox.com<@Cyan>\n",
-      "  Github  : <@Blue>https://github.com/abgox/PSCompletions<@Cyan>\n",
-      "  Gitee   : <@Blue>https://gitee.com/abgox/PSCompletions<@Cyan>\n",
+      "<@Cyan>[Other Content]\n",
+      "Website : <@Blue>https://pscompletions.abgox.com<@Cyan>\n",
+      "FAQ     : <@Blue>https://pscompletions.abgox.com/faq<@Cyan>\n",
+      "Github  : <@Blue>https://github.com/abgox/PSCompletions<@Cyan>\n",
+      "Gitee   : <@Blue>https://gitee.com/abgox/PSCompletions<@Cyan>\n",
       "\n",
       "If you have a problem using it, you can submit an issue: https://github.com/abgox/PSCompletions/issues\n",
       "\n",
       "If <@Blue>PSCompletions<@Cyan> is helpful to you, please consider giving it a <@Yellow>Star<@Cyan>."
-    ],
-    "description": [
-      "<@Blue>PSCompletions(<@Magenta>psc<@Cyan>) --- PowerShell Completions Manager\n",
-      "\n",
-      "{{ $PSCompletions.info.desc }}"
     ],
     "err": {
       "deny_change_menu_line_style": [
@@ -2352,14 +2358,6 @@
         "<@Red>It contains wildcard characters."
       ]
     },
-    "init_info": [
-      "\n",
-      "✨✨✨ <@Blue>PSCompletions(<@Magenta>psc<@Cyan>) --- init successfully ✨✨✨\n",
-      "<@Yellow>The following is displayed for the first time only, you can also see it by running <@Magenta>psc<@Yellow>.\n",
-      "\n",
-      "{{ $PSCompletions.info.description }}",
-      "\n"
-    ],
     "list": {
       "added": "Added",
       "example": [
@@ -2379,8 +2377,8 @@
       },
       "config": {
         "err": {
-          "filter_symbol": "<@Red>It must contain at least two characters.",
           "completion_suffix": "<@Red>It can only be one or more spaces.",
+          "filter_symbol": "<@Red>It must contain at least two characters.",
           "trigger_key": "<@Red>It isn't a valid trigger key.",
           "v_1_or_0": "<@Red>It should be the number <@Magenta>1<@Red> or <@Magenta>0<@Red>, which means enabled or disabled.",
           "v_ge": "<@Red>It should be an integer number greater than or equal to<@Magenta>{{ $min }}.",
@@ -2449,7 +2447,7 @@
         "<@Cyan>[Module Update]\n",
         "<@Blue>PSCompletions: <@Magenta>{{ $PSCompletions.version }} <@Cyan>=> <@Magenta>{{ $PSCompletions.config.enable_module_update }}\n",
         "\n",
-        "<@Cyan>[Version Changelog]\n",
+        "<@Cyan>[Module Changelog]\n",
         "Github: <@Blue>https://github.com/abgox/PSCompletions/blob/main/module/CHANGELOG.md<@Cyan>\n",
         "Gitee : <@Blue>https://gitee.com/abgox/PSCompletions/blob/main/module/CHANGELOG.md<@Cyan>\n",
         "\n",
