feat(module): add pure color theme for menu

--- a/completions/psc/language/en-US.json
+++ b/completions/psc/language/en-US.json
@@ -252,15 +252,93 @@
           ],
           "next": [
             {
-              "name": "default",
+              "name": "Blue",
               "tip": [
-                "Set to default theme. (Dark theme)"
+                "Pure color theme."
               ]
             },
             {
-              "name": "magenta",
+              "name": "Cyan",
               "tip": [
-                "Set to magenta theme. (Light theme)"
+                "Pure color theme."
+              ]
+            },
+            {
+              "name": "DarkBlue",
+              "tip": [
+                "Pure color theme."
+              ]
+            },
+            {
+              "name": "DarkCyan",
+              "tip": [
+                "Pure color theme."
+              ]
+            },
+            {
+              "name": "DarkGray",
+              "tip": [
+                "Pure color theme."
+              ]
+            },
+            {
+              "name": "DarkGreen",
+              "tip": [
+                "Pure color theme."
+              ]
+            },
+            {
+              "name": "DarkMagenta",
+              "tip": [
+                "Pure color theme."
+              ]
+            },
+            {
+              "name": "DarkRed",
+              "tip": [
+                "Pure color theme."
+              ]
+            },
+            {
+              "name": "DarkYellow",
+              "tip": [
+                "Pure color theme."
+              ]
+            },
+            {
+              "name": "Default",
+              "tip": [
+                "Default theme."
+              ]
+            },
+            {
+              "name": "Gray",
+              "tip": [
+                "Pure color theme."
+              ]
+            },
+            {
+              "name": "Green",
+              "tip": [
+                "Pure color theme."
+              ]
+            },
+            {
+              "name": "Magenta",
+              "tip": [
+                "Pure color theme."
+              ]
+            },
+            {
+              "name": "Red",
+              "tip": [
+                "Pure color theme."
+              ]
+            },
+            {
+              "name": "Yellow",
+              "tip": [
+                "Pure color theme."
               ]
             }
           ]
@@ -2371,8 +2449,8 @@
           "<@Green>The color style of the module completion menu modified successfully!"
         ],
         "example": [
-          "E: psc menu color_theme default      --- Default theme\n",
-          "   psc menu color_theme magenta      --- Magenta"
+          "E: psc menu color_theme Default         --- Default theme\n",
+          "   psc menu color_theme DarkMagenta     --- Pure color theme"
         ]
       },
       "config": {
