--- a/completions/psc/language/zh-CN.json
+++ b/completions/psc/language/zh-CN.json
@@ -253,15 +253,93 @@
           ],
           "next": [
             {
-              "name": "default",
+              "name": "Blue",
               "tip": [
-                "设置为默认主题(深色主题)。"
+                "纯色主题"
               ]
             },
             {
-              "name": "magenta",
+              "name": "Cyan",
               "tip": [
-                "设置为 Magenta 主题(浅色主题)。"
+                "纯色主题"
+              ]
+            },
+            {
+              "name": "DarkBlue",
+              "tip": [
+                "纯色主题"
+              ]
+            },
+            {
+              "name": "DarkCyan",
+              "tip": [
+                "纯色主题"
+              ]
+            },
+            {
+              "name": "DarkGray",
+              "tip": [
+                "纯色主题"
+              ]
+            },
+            {
+              "name": "DarkGreen",
+              "tip": [
+                "纯色主题"
+              ]
+            },
+            {
+              "name": "DarkMagenta",
+              "tip": [
+                "纯色主题"
+              ]
+            },
+            {
+              "name": "DarkRed",
+              "tip": [
+                "纯色主题"
+              ]
+            },
+            {
+              "name": "DarkYellow",
+              "tip": [
+                "纯色主题"
+              ]
+            },
+            {
+              "name": "Default",
+              "tip": [
+                "默认主题"
+              ]
+            },
+            {
+              "name": "Gray",
+              "tip": [
+                "纯色主题"
+              ]
+            },
+            {
+              "name": "Green",
+              "tip": [
+                "纯色主题"
+              ]
+            },
+            {
+              "name": "Magenta",
+              "tip": [
+                "纯色主题"
+              ]
+            },
+            {
+              "name": "Red",
+              "tip": [
+                "纯色主题"
+              ]
+            },
+            {
+              "name": "Yellow",
+              "tip": [
+                "纯色主题"
               ]
             }
           ]
@@ -2367,8 +2445,8 @@
           "<@Green>模块补全菜单的颜色样式主题修改成功!"
         ],
         "example": [
-          "E: psc menu color_theme default      --- 默认主题\n",
-          "   psc menu color_theme magenta      --- Magenta"
+          "E: psc menu color_theme Default         --- 默认主题\n",
+          "   psc menu color_theme DarkMagenta     --- 纯色主题"
         ]
       },
       "config": {
