feat(scripts): update

--- a/scripts/language/en-US.json
+++ b/scripts/language/en-US.json
@@ -39,10 +39,8 @@
     "exist": "<@Red>The completion directory already exists!",
     "success": [
       "<@Green>Completion <@Magenta>{{ $completion_name }}<@Green> has been created successfully!\n",
-      "It has been linked to the PSCompletions module: <@Magenta>{{ $test_dir }}<@Green>\n",
-      "If hooks are not needed, please delete the <@Magenta>hooks<@Green> attribute in <@Magenta>config.json<@Green>, and relink the completion via <@Magenta>.\\scripts\\link-completion.ps1 {{ $completion_name }}<@Green>\n\n",
-      "<@Green>Suggestion: Please disable the completion cache via <@Magenta>psc config enable_cache 0<@Green> to preview the latest real-time changes.\n",
-      "<@Yellow>Note: This link operation is only for the test or development of completion, and remove it via <@Magenta>psc rm {{ $completion_name }} <@Yellow>in time."
+      "You can link the completion via <@Magenta>.\\scripts\\link-completion.ps1 {{ $completion_name }}<@Green> to preview the completion in real-time while writing it.\n",
+      "If hooks are not needed, please delete the <@Magenta>hooks<@Green> attribute in <@Magenta>config.json<@Green> and hooks.ps1 file, and relink the completion."
     ],
     "err": {
       "name": "<@Red>The completion name cannot be empty!"
@@ -62,7 +60,7 @@
     "linkDone": [
       "<@Green>Completion <@Magenta>{{ $completion_name }}<@Green> has been linked to the PSCompletions module: <@Magenta>{{ $test_dir }}<@Green>\n\n",
       "<@Green>Suggestion: Please disable the completion cache via <@Magenta>psc config enable_cache 0<@Green> to preview the latest real-time changes.\n",
-      "<@Yellow>Note: This link operation is only for the test or development of completion, and remove it via <@Magenta>psc rm {{ $completion_name }} <@Yellow>in time."
+      "<@Yellow>Note: The completion link is only for local use, <@Magenta>psc add<@Yellow> and <@Magenta>psc update<@Yellow> will ignore them."
     ]
   },
   "publish-module": {
