--- a/scripts/language/zh-CN.json
+++ b/scripts/language/zh-CN.json
@@ -39,10 +39,8 @@
     "exist": "<@Red>补全目录已经存在!",
     "success": [
       "<@Green>补全 <@Magenta>{{ $completion_name }}<@Green> 创建完成!\n",
-      "已链接到 PSCompletions 模块中: <@Magenta>{{ $test_dir }}<@Green>\n",
-      "如果不需要 hooks，请删除 <@Magenta>config.json<@Green> 中的 <@Magenta>hooks<@Green> 属性，并通过 <@Magenta>.\\scripts\\link-completion.ps1 {{ $completion_name }}<@Green> 重新链接补全\n\n",
-      "<@Green>建议: 通过 <@Magenta>psc config enable_cache 0<@Green> 禁用补全缓存，以预览最新的实时更改\n",
-      "<@Yellow>注意: 这个链接操作只用于补全的编写测试，完成后请及时通过 <@Magenta>psc rm {{ $completion_name }}<@Yellow> 移除它"
+      "你可以通过 <@Magenta>.\\scripts\\link-completion.ps1 {{ $completion_name }}<@Green> 链接补全以在编写补全时获得实时预览\n",
+      "如果不需要 hooks，请删除 <@Magenta>config.json<@Green> 中的 <@Magenta>hooks<@Green> 属性和 hooks.ps1 文件，然后重新链接补全"
     ],
     "err": {
       "name": "<@Red>补全名称不能为空!"
@@ -62,7 +60,7 @@
     "linkDone": [
       "<@Green>补全 <@Magenta>{{ $completion_name }}<@Green> 已链接到 PSCompletions 模块中: <@Magenta>{{ $test_dir }}<@Green>\n\n",
       "<@Green>建议: 通过 <@Magenta>psc config enable_cache 0<@Green> 禁用补全缓存，以预览最新的实时更改\n",
-      "<@Yellow>注意: 这个链接操作只用于补全的编写测试，完成后请及时通过 <@Magenta>psc rm {{ $completion_name }}<@Yellow> 移除它"
+      "<@Yellow>注意: 补全链接仅用于本地，<@Magenta>psc add<@Yellow> 和 <@Magenta>psc update<@Yellow> 会忽略它们"
     ]
   },
   "publish-module": {
