feat(completions): update scoop

--- a/completions/scoop/language/en-US.json
+++ b/completions/scoop/language/en-US.json
@@ -386,7 +386,7 @@
               "name": "0",
               "tip": [
                 "Don't create shortcuts defined in the manifest.",
-                "Refer to: https://gitee.com/abgox/abyss#config"
+                "Refer to: https://abyss.abgox.com/features/extra-features#abgox-abyss-app-shortcuts-action"
               ]
             },
             {
@@ -394,14 +394,14 @@
               "tip": [
                 "Default value",
                 "Create shortcuts defined in the manifest.",
-                "Refer to: https://gitee.com/abgox/abyss#config"
+                "Refer to: https://abyss.abgox.com/features/extra-features#abgox-abyss-app-shortcuts-action"
               ]
             },
             {
               "name": "2",
               "tip": [
                 "If the app creates shortcuts via installer, don't create shortcuts defined in the manifest; otherwise, create them.",
-                "Refer to: https://gitee.com/abgox/abyss#config"
+                "Refer to: https://abyss.abgox.com/features/extra-features#abgox-abyss-app-shortcuts-action"
               ]
             }
           ]
@@ -413,30 +413,30 @@
             {
               "name": "1",
               "tip": [
-                "Default value",
                 "Attempt to terminate processes before uninstallation/update.",
-                "Refer to: https://gitee.com/abgox/abyss#config"
+                "Refer to: https://abyss.abgox.com/features/extra-features#abgox-abyss-app-uninstall-action"
               ]
             },
             {
               "name": "12",
               "tip": [
                 "Attempt to terminate processes before uninstallation/update, and delete the files/directories created via Link.",
-                "Refer to: https://gitee.com/abgox/abyss#config"
+                "Refer to: https://abyss.abgox.com/features/extra-features#abgox-abyss-app-uninstall-action"
               ]
             },
             {
               "name": "123",
               "tip": [
+                "Default value",
                 "Attempt to terminate processes before uninstallation/update, delete the files/directories created via Link, and delete the temporary data.",
-                "Refer to: https://gitee.com/abgox/abyss#config"
+                "Refer to: https://abyss.abgox.com/features/extra-features#abgox-abyss-app-uninstall-action"
               ]
             },
             {
               "name": "13",
               "tip": [
                 "Attempt to terminate processes before uninstallation/update, and delete the temporary data.",
-                "Refer to: https://gitee.com/abgox/abyss#config"
+                "Refer to: https://abyss.abgox.com/features/extra-features#abgox-abyss-app-uninstall-action"
               ]
             }
           ]
