--- a/completions/scoop/language/zh-CN.json
+++ b/completions/scoop/language/zh-CN.json
@@ -385,7 +385,7 @@
               "name": "0",
               "tip": [
                 "不创建清单中定义的快捷方式",
-                "详情参考: https://gitee.com/abgox/abyss#config"
+                "详情参考: https://abyss.abgox.com/features/extra-features#abgox-abyss-app-shortcuts-action"
               ]
             },
             {
@@ -393,14 +393,14 @@
               "tip": [
                 "默认值",
                 "创建清单中定义的快捷方式",
-                "详情参考: https://gitee.com/abgox/abyss#config"
+                "详情参考: https://abyss.abgox.com/features/extra-features#abgox-abyss-app-shortcuts-action"
               ]
             },
             {
               "name": "2",
               "tip": [
                 "如果应用使用安装程序创建了快捷方式，就不创建清单中定义的快捷方式，否则就创建",
-                "详情参考: https://gitee.com/abgox/abyss#config"
+                "详情参考: https://abyss.abgox.com/features/extra-features#abgox-abyss-app-shortcuts-action"
               ]
             }
           ]
@@ -412,30 +412,30 @@
             {
               "name": "1",
               "tip": [
-                "默认值",
                 "卸载/更新时先尝试终止相关进程",
-                "详情参考: https://gitee.com/abgox/abyss#config"
+                "详情参考: https://abyss.abgox.com/features/extra-features#abgox-abyss-app-uninstall-action"
               ]
             },
             {
               "name": "12",
               "tip": [
                 "卸载/更新时先尝试终止相关进程，然后删除通过 Link 创建的文件或目录",
-                "详情参考: https://gitee.com/abgox/abyss#config"
+                "详情参考: https://abyss.abgox.com/features/extra-features#abgox-abyss-app-uninstall-action"
               ]
             },
             {
               "name": "123",
               "tip": [
+                "默认值",
                 "卸载/更新时先尝试终止相关进程，然后删除通过 Link 创建的文件或目录以及临时数据",
-                "详情参考: https://gitee.com/abgox/abyss#config"
+                "详情参考: https://abyss.abgox.com/features/extra-features#abgox-abyss-app-uninstall-action"
               ]
             },
             {
               "name": "13",
               "tip": [
                 "卸载/更新时先尝试终止相关进程，然后删除临时数据",
-                "详情参考: https://gitee.com/abgox/abyss#config"
+                "详情参考: https://abyss.abgox.com/features/extra-features#abgox-abyss-app-uninstall-action"
               ]
             }
           ]
